detail des  paiements d'un élève